--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 *New file
 </div>
 <div id="footer">
-<button id="save">save</button>
+<button type="button" id="save">save</button>
 </div>
 <script type="text/javascript">
 window.addEventListener('load', function() {
