--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
 #header {
   position: fixed;
   top: 0;
+  right: 0;
+  left: 0;
   height: 2em;
   color: #fff;
   background-color: #222;
+  line-height: 2em;
 }
 #footer {
   position: fixed;
+  right: 0;
   bottom: 0;
+  left: 0;
   height: 2em;
   color: #fff;
   background-color: #222;
   text-align: right;
+  line-height: 2em;
 }
 </style>
 </head>
@@ -46,7 +52,7 @@
 <script type="text/javascript">
 window.addEventListener('load', function() {
   document.getElementById('save').addEventListener('click', function() {
-    var blob = new Blob([ document.getElementById('body').innerHTML ], { "type" : "text/plain" });
+    var blob = new Blob([ document.getElementById('body').innerHTML ], { "type" : "text/plain; charset=UTF-8" });
     if (window.navigator.msSaveBlob) { 
         window.navigator.msSaveBlob(blob, "book.txt");
     } else {
