--- a/index.html
+++ b/index.html
@@ -15,27 +15,30 @@
   left: 0;
   color: #000;
   background-color: #ddd;
+  padding: 0.5em;
+}
+#header, #footer {
+  position: fixed;
+  right: 0;
+  left: 0;
+  height: 2em;
+  color: #fff;
+  background-color: #222;
+  line-height: 2em;
+  padding: 0 0.5em;
 }
 #header {
-  position: fixed;
   top: 0;
-  right: 0;
-  left: 0;
-  height: 2em;
-  color: #fff;
-  background-color: #222;
-  line-height: 2em;
 }
 #footer {
-  position: fixed;
-  right: 0;
   bottom: 0;
-  left: 0;
-  height: 2em;
-  color: #fff;
-  background-color: #222;
   text-align: right;
-  line-height: 2em;
+}
+a {
+  display: inline-block;
+  border-radius: 1em;
+  color: #fff;
+  border: 1px solid #22c;
 }
 </style>
 </head>
