--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ a {
   border-radius: 1em;
   color: #fff;
   border: 1px solid #22c;
+  background-color: #22c;
+  padding: 0 0.5em;
 }
 </style>
 </head>
